and, most importantly, Aldoir Ventura <aldoir@users.sourceforge.net>
who gave us Uebimiau, on which Telaen is based, in the first place!

LICENSE:
Telaen is released under the GPL.


CHANGELOG:

----------------------------------------------------------------
Telaen:
----------------------------------------------------------------

1.1.0:

 * New feature: mark as read/unread on message list

 * Fixed problem with possible incorrect redirects. Instead
   of checking that $_SERVER['HTTPS'] is non-empty, we
   check explicitly for it being set to 'on'. The official
   PHP docs are misleading (wrong) here.

 * Add in extra/check_install.php.txt which performs some
   simple tests of your installation and setup.
   
 * No longer require short_open_tag.

 * Some under-the-hood code improvements.

 * Remove the SPAM folder from the list of
   "folders that stuff can be moved to by the
   user."

 * The Advanced HTML Editor is now TinyMCE, which
   is bundled with Telaen. Changes to the newmsg.htm
   template file may be required (depending on the
   template) to fully use this.

 * Now, whenever Telaen adds body content (eg: whenever
   we Decode), we choose to sanitize or not. This means
   that messages are sanitized when printed or
   forwarded/replied to. Added a global variable,
   $sanitize_html to control this ($allow_scripts
   also works, but is being depreciated since it
   doesn't reflect what we're really concerned about).

 * Fixed bug where show_body was not using the correct
   charset (since it was removed by HTMLFilter).

 * Removed old krufty session code to use native PHP session()
   capability.

 * Removed the tid/lid/sid stuff from the URL. Stored in
   user sessions, as it should be.

1.0.0:

 * Revised de.txt and pt_BR.txt files.
 
1.0.0-RC2:

 * Fix the default theme to use a draft Telaen logo
   instead of the old Uebimiau one.

 * The preferences page is now shown whenever the
   previously used version and the present version differ